--- a/shecodes-plus-projects/shecode+wk2-homework/wk2-homework.html
+++ b/shecodes-plus-projects/shecode+wk2-homework/wk2-homework.html
@@ -33,14 +33,14 @@
     <h3>
       <form class="form-part">
         <div>
-          <input type="text" placeholder="Enter city" />
+          <input type="text" id="search-city"  placeholder="Enter city" />
         </div>
       </form>
-      <button>Search</button>
+      <button id="search-button" value="search">Search</button>
     </h3>
     <h3 class="main-weather">
-      Benin <br />
-      Friday 9:36am
+      <div id="city">Benin</div> <br/>
+      <p id="display"> 9:36am </p>
       <div class="row">
         <div class="col">
           Sunny
@@ -98,6 +98,6 @@
         </div>
       </div>
     </div>
-     <script src="wk2javascript.js"></script>
+     <script src="wk4javascript.js"></script>
   </body>
 </html>
