created a dynamic and responsive webpage with multiple pages

--- a/portfolio project/index.html
+++ b/portfolio project/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabitha portfolio project</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <h1>Home page</h1>
-    <div><a href="about.html">About me</a></div>
-    <div><a href="contact.html">Contact me</a></div>
-    <div><a href="project/weather.html">Projects</a></div>
+    <h2>Hi i'm</h2>
+    <h1>Imafidon Tabitha</h1>
+    <p> Web developer based in Nigeria</p>
+    <div class="container">
+    <div class="mini-container"><a href="about.html">About me</a></div>
+    <div class="mini-container"><a href="about.html#contact">Contact me</a></div>
+    </div>
+    <div class="main-project">
+    <span class="project"><a href="project/weather.html">Projects</a></span>
+    </div>
 </body>
 </html>
