--- a/portfolio project/about.html
+++ b/portfolio project/about.html
@@ -4,11 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
+    <style>
+        h2{
+            display: flex;
+            justify-content: center;
+            font-size: 40px;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+        }
+        .my-style{
+            display: flex;
+            flex-direction: column;
+        }
+        p{
+            font-size: 20px;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        }
+        div{
+            display: flex;
+            justify-content: center;
+            font-size: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h2>Aboout me</h2>
-    <p> My name is Imafidon Oseremen Tabitha, I'm a final year student at the University of Benin. i love reading, writing and internet surfing</p>
-    <p> I'm a web developer and a blogger. You can access the link on projects, to see some of my works.</p>
+    <h2>About me</h2>
+    <div class="my-style">
+    <p> My name is Imafidon Oseremen Tabitha, I'm a final year student at the University of Benin. i love reading, writing and internet surfing. I have been coding for some time now and i absolutely love it.</p>
+    <p> I'm a web developer, UI/UX designer, software engineer and a blogger. I have worked on a variety of projecs which you can access <a href="project/weather.html">here</a> or can access from the link on projects on my homepage. Access the link to see some of my works.</p>
+    <div id="contact"><a href="mailto:imafidontabitha@gmail.com">contactme@imafidontabitha@gmail.com</a></div>
+    </div>
     <div><a href="index.html">Back to homepage</a></div>
 </body>
 </html>
