--- a/portfolio project/project/weather.html
+++ b/portfolio project/project/weather.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <p>Loading....</p>
+    <div><a href="../about.html">Back to about me</a></div>
     <div><a href="../index.html">Back to homepage</a></div>
 </body>
 </html>
