--- a/shecodes-basic-projects/landing-page/index.html
+++ b/shecodes-basic-projects/landing-page/index.html
@@ -6,26 +6,26 @@
     <title>Document</title>
     <style>
       body {
-        text-align: center;
-        margin: 50px 300px 50px 300px;
-        padding: 0%;
         background-color: darkmagenta;
       }
       .article {
-        text-align: justify;
-        margin: 10px 200px 10px 200px;
-        line-height: 50px;
+        display: flex;
+        flex-direction: column;
         font-weight: bolder;
         font-size: 25px;
         font-family: "Times New Roman", Times, serif;
       }
       h1 {
+        display: flex;
+        justify-content: center;
         color: chocolate;
         font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
         font-weight: bolder;
         font-size: 50px;
       }
       h2 {
+        display: flex;
+        justify-content: center;
         color: rgb(199, 146, 146);
         font-weight: bolder;
         font-size: 40px;
@@ -33,13 +33,22 @@
           sans-serif;
       }
       a {
+        display: flex;
+        justify-content: center;
         color: olivedrab;
+      }
+      .image{
+        display: flex;
+        justify-content: center;
+      }
+      .btn{
+        display: flex;
+        justify-content: center;
       }
       button {
         background-color: coral;
         color: black;
         padding: 20px;
-        margin: 20px;
         font-size: 20px;
         font-weight: bolder;
         border-radius: 40px;
@@ -48,6 +57,8 @@
         transition: all 200ms ease-in-out;
       }
       .name {
+        display: flex;
+        justify-content: center;
         font-size: 20px;
         font-weight: bolder;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -62,10 +73,12 @@
   <body>
     <h1>Branded Luxury</h1>
     <h2>The path to a sophisticated look</h2>
+    <div class="image">
     <img
       src="https://media.istockphoto.com/id/155596905/photo/high-class-
 female-clothing.jpg?s=612x612&w=0&k=20&c=V1HcqglhOc76MHidrmyPjraiMNXwhAzO-wMHbEMMEqM="
     />
+    </div>
     <p class="article">
       Designer clothing is expensive luxury clothing proven to be high quality
       and haute couture for the general public, made by, or carrying the label
@@ -82,7 +95,9 @@ female-clothing.jpg?s=612x612&w=0&k=20&c=V1HcqglhOc76MHidrmyPjraiMNXwhAzO-wMHbEM
         Learn more</a
       >
     </p>
+    <div class="btn">
     <button>Contact Us</button>
+    </div>
     <p class="name">Coded by Imafidon Tabitha</p>
     <script>
       function contactus() {
