--- a/shecodes-basic-projects/static-weather-page/index.html
+++ b/shecodes-basic-projects/static-weather-page/index.html
@@ -42,9 +42,19 @@
       .bold{
         font-weight: bolder;
       }
+      .cover{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
+      .container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
       .edit{
-        padding:10px 20px 10px 20px;
-        margin:0px 350px 0px 350px;
+        padding: 20px;
+        margin: 0px 170px 0px 170px;
         background-color: transparent;
         border-radius: 10px;
         font-family: Arial, Helvetica, sans-serif;
@@ -58,6 +68,7 @@
     </style>
 </head>
 <body>
+    <div class="container">
     <p class="clouds"> &#127780</p>
     <h1>Currently 21&deg; in Tokyo</h1>
     <h2>
@@ -66,6 +77,8 @@
         <strong class="bold">23&deg</strong>
     </div>
     </h2>
+    </div>
+    <div class="cover">
     <div class="edit">&#127783 <strong>Tomorrow</strong>
     <div class="mini">
         10&deg;/
@@ -82,6 +95,7 @@
     <div class="mini">
         25&deg;/
         <strong>28&deg;</strong>
+    </div>
     </div>
     </div>
     <button>Change city</button>
