--- a/portfolio project/about.html
+++ b/portfolio project/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
         h2{
             display: flex;
@@ -31,8 +32,21 @@
     <div class="my-style">
     <p> My name is Imafidon Oseremen Tabitha, I'm a final year student at the University of Benin. i love reading, writing and internet surfing. I have been coding for some time now and i absolutely love it.</p>
     <p> I'm a web developer, UI/UX designer, software engineer and a blogger. I have worked on a variety of projecs which you can access <a href="project/weather.html">here</a> or can access from the link on projects on my homepage. Access the link to see some of my works.</p>
-    <div id="contact"><a href="mailto:imafidontabitha@gmail.com">contactme@imafidontabitha@gmail.com</a></div>
     </div>
+    <div class="container">
+        <div class="row my-3">
+            <div class="col-4">
+                <img src="images/Screenshot_20240204-235555_Chrome.jpg" class="img-fluid rounded border border-3 border-secondary-subtle p-3 w-75 h-75">
+             </div>
+            <div class="col-4">
+                <img src="images/Screenshot_20240204-235627_Chrome.jpg" class="img-fluid rounded border border-3 border-secondary-subtle p-3 w-75 h-75">
+            </div>
+            <div class="col-4">
+                <img src="images/Screenshot_20240205-000250_Chrome.jpg" class="img-fluid rounded border border-3 border-secondary-subtle p-3 w-75 h-75">
+            </div>
+        </div> 
+    </div> 
+    <div id="contact"><a href="mailto:imafidontabitha@gmail.com">contactme@imafidontabitha@gmail.com</a></div>
     <div><a href="index.html">Back to homepage</a></div>
 </body>
 </html>
