--- a/portfolio project/index.html
+++ b/portfolio project/index.html
@@ -5,17 +5,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabitha portfolio project</title>
     <link rel="stylesheet" href="style.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
+    <div class="bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-secondary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">👩🏻‍💻Tabitha</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="project/weather.html">Project</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <h2>Hi i'm</h2>
-    <h1>Imafidon Tabitha</h1>
-    <p> Web developer based in Nigeria</p>
-    <div class="container">
-    <div class="mini-container"><a href="about.html">About me</a></div>
-    <div class="mini-container"><a href="about.html#contact">Contact me</a></div>
+    <h1>👩🏻‍💻Imafidon Tabitha</h1>
+    <p>Web developer based in Nigeria</p>
+    <div class="contain">
+    <div class="mini-container"><a href="about.html" class="text-body-secondary text-decoration-none ">About me</a></div>
+    <div class="mini-container"><a href="about.html#contact" class="text-body-secondary text-decoration-none">Contact me</a></div>
     </div>
     <div class="main-project">
-    <span class="project"><a href="project/weather.html">Projects</a></span>
+    <span class="project"><a href="project/weather.html" class="text-body-secondary text-decoration-none">Projects</a></span>
     </div>
+    <div class="container">
+        <div class="row border border-3 border-secondary-subtle my-3">
+            <div class="col-6">
+                <img src="images/Screenshot_20240204-235555_Chrome.jpg" class="img-fluid rounded p-3 w-75 h-75">
+             </div>
+             <div class="col-6 p-3 fw-bolder bg-light-subtle">
+                This project is a simple landing page on luxury goods. it was coded using CSS, HTML and Javascript
+             </div>
+        </div>
+        <div class="row border border-3 border-secondary-subtle my-3">
+            <div class="col-6 p-3 fw-bolder bg-light-subtle">
+                This weather app project was built using CSS, HTML, Ajax, Axios and Javascript. it gives the current weather of a particular country or state entered. it also adds some other information, like wind speed, humidty and an emoji to represent the weather condition.
+            </div>
+             <div class="col-6">
+                <img src="images/Screenshot_20240204-235627_Chrome.jpg" class="img-fluid rounded p-3 w-100 h-100">
+            </div>
+        </div>
+        <div class="row border border-3 border-secondary-subtle my-3">
+            <div class="col-6">
+                <img src="images/Screenshot_20240205-000250_Chrome.jpg" class="img-fluid rounded p-3 w-75 h-75">
+            </div>
+            <div class="col-6 p-3 fw-bolder bg-light-subtle">
+                A static weather page, with fake data. It displays fake data on today's weather information.
+            </div>
+        </div>
+    </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
