--- a/portfolio project/about.html
+++ b/portfolio project/about.html
@@ -35,13 +35,13 @@
     </div>
     <div class="container">
         <div class="row my-3">
-            <div class="col-4">
+            <div class="col-md-4">
                 <img src="images/Screenshot_20240204-235555_Chrome.jpg" class="img-fluid rounded border border-3 border-secondary-subtle p-3 w-75 h-75">
              </div>
-            <div class="col-4">
+            <div class="col-md-4">
                 <img src="images/Screenshot_20240204-235627_Chrome.jpg" class="img-fluid rounded border border-3 border-secondary-subtle p-3 w-75 h-75">
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
                 <img src="images/Screenshot_20240205-000250_Chrome.jpg" class="img-fluid rounded border border-3 border-secondary-subtle p-3 w-75 h-75">
             </div>
         </div> 
