made my portfolio website responsive

--- a/portfolio project/index.html
+++ b/portfolio project/index.html
@@ -11,20 +11,20 @@
     <div class="bg-body-tertiary">
     <nav class="navbar navbar-expand-lg bg-secondary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">👩🏻‍💻Tabitha</a>
+            <a class="navbar-brand text-light fw-bolder" href="#">👩🏻‍💻Tabitha</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active text-light fw-bolder" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link text-light fw-bolder" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="project/weather.html">Project</a>
+                        <a class="nav-link text-light fw-bolder" href="project/weather.html">Project</a>
                     </li>
                 </ul>
             </div>
@@ -37,32 +37,32 @@
     <div class="mini-container"><a href="about.html" class="text-body-secondary text-decoration-none ">About me</a></div>
     <div class="mini-container"><a href="about.html#contact" class="text-body-secondary text-decoration-none">Contact me</a></div>
     </div>
-    <div class="main-project">
-    <span class="project"><a href="project/weather.html" class="text-body-secondary text-decoration-none">Projects</a></span>
-    </div>
     <div class="container">
-        <div class="row border border-3 border-secondary-subtle my-3">
-            <div class="col-6">
-                <img src="images/Screenshot_20240204-235555_Chrome.jpg" class="img-fluid rounded p-3 w-75 h-75">
+        <div class="row my-3">
+            <div class="col-6 bg-dark-subtle d-none d-sm-block">
+                <img src="images/Screenshot_20240204-235555_Chrome.jpg" alt="landing-page" class="img-fluid rounded p-3 w-100 h-100">
              </div>
-             <div class="col-6 p-3 fw-bolder bg-light-subtle">
+             <div class="col-6 fw-bolder p-3 bg-light-subtle">
                 This project is a simple landing page on luxury goods. it was coded using CSS, HTML and Javascript
+                <div><button class="rounded bg-dark text-light">launch webpage</button></div>
              </div>
         </div>
-        <div class="row border border-3 border-secondary-subtle my-3">
+        <div class="row my-3">
             <div class="col-6 p-3 fw-bolder bg-light-subtle">
                 This weather app project was built using CSS, HTML, Ajax, Axios and Javascript. it gives the current weather of a particular country or state entered. it also adds some other information, like wind speed, humidty and an emoji to represent the weather condition.
+                <div><button class="rounded bg-dark text-light">launch weatherapp</button></div>
             </div>
-             <div class="col-6">
-                <img src="images/Screenshot_20240204-235627_Chrome.jpg" class="img-fluid rounded p-3 w-100 h-100">
+             <div class="col-6 bg-dark-subtle d-none d-sm-block">
+                <img src="images/Screenshot_20240208-091602_Chrome.jpg" alt="weather-app" class="img-fluid rounded p-3 w-100 h-100">
             </div>
         </div>
-        <div class="row border border-3 border-secondary-subtle my-3">
-            <div class="col-6">
-                <img src="images/Screenshot_20240205-000250_Chrome.jpg" class="img-fluid rounded p-3 w-75 h-75">
+        <div class="row my-3">
+            <div class="col-6 bg-dark-subtle d-none d-sm-block">
+                <img src="images/Screenshot_20240208-091630_Chrome.jpg" alt="static-weather-page" class="img-fluid rounded p-3 w-100 h-100">
             </div>
             <div class="col-6 p-3 fw-bolder bg-light-subtle">
                 A static weather page, with fake data. It displays fake data on today's weather information.
+                <div><button class="rounded bg-dark text-light">launch webpage</button></div>
             </div>
         </div>
     </div>
