--- a/portfolio project/index.html
+++ b/portfolio project/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta 
+        name="description"
+        content="Tabitha is a frontend web developer from Nigeria"
+    />
     <title>Tabitha portfolio project</title>
     <link rel="stylesheet" href="style.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -30,39 +34,42 @@
             </div>
         </div>
     </nav>
-    <h2>Hi i'm</h2>
-    <h1>👩🏻‍💻Imafidon Tabitha</h1>
-    <p>Web developer based in Nigeria</p>
+    <h2 class="first text-center">Hi I'm</h2>
+    <h1 class="second text-center">👩🏻Imafidon Tabitha</h1>
+    <p class="desc text-center">Web developer based in Nigeria</p>
     <div class="contain">
-    <div class="mini-container"><a href="about.html" class="text-body-secondary text-decoration-none ">About me</a></div>
-    <div class="mini-container"><a href="about.html#contact" class="text-body-secondary text-decoration-none">Contact me</a></div>
+    <div class="mini-container"><a href="about.html" class="text-body-secondary text-decoration-none" title="about Tabitha">About me</a></div>
+    <div class="mini-container"><a href="about.html#contact" class="text-body-secondary text-decoration-none" title="contact Tabitha">Contact me</a></div>
     </div>
     <div class="container">
         <div class="row my-3">
-            <div class="col-6 bg-dark-subtle d-none d-sm-block">
+            <div class="btn col-6 bg-dark-subtle d-none d-sm-block">
                 <img src="images/Screenshot_20240204-235555_Chrome.jpg" alt="landing-page" class="img-fluid rounded p-3 w-100 h-100">
              </div>
-             <div class="col-6 fw-bolder p-3 bg-light-subtle">
-                This project is a simple landing page on luxury goods. it was coded using CSS, HTML and Javascript
-                <div><button class="rounded bg-dark text-light">launch webpage</button></div>
+             <div class="col-6 p-3 bg-light-subtle">
+                <h2>Luxury Goods Landpage Project</h2>
+                <p>This project is a simple landing page on luxury goods. it was coded using CSS, HTML and Javascript.</p>
+                <div class="btn"><button class="rounded bg-dark text-light" title="lauch landpage project">launch webpage</button></div>
              </div>
         </div>
         <div class="row my-3">
-            <div class="col-6 p-3 fw-bolder bg-light-subtle">
-                This weather app project was built using CSS, HTML, Ajax, Axios and Javascript. it gives the current weather of a particular country or state entered. it also adds some other information, like wind speed, humidty and an emoji to represent the weather condition.
-                <div><button class="rounded bg-dark text-light">launch weatherapp</button></div>
+            <div class="col-6 p-3 bg-light-subtle">
+                <h2>Weather App Project</h2>
+                <p>This weather app project was built using CSS, HTML, Ajax, Axios and Javascript. it gives the current weather of a particular country or state entered. it also adds some other information, like wind speed, humidty and an emoji to represent the weather condition.</p>
+                     <div class="btn"><button class="rounded bg-dark text-light" title="launch weaather app project">launch weatherapp</button></div>
             </div>
              <div class="col-6 bg-dark-subtle d-none d-sm-block">
                 <img src="images/Screenshot_20240208-091602_Chrome.jpg" alt="weather-app" class="img-fluid rounded p-3 w-100 h-100">
             </div>
         </div>
         <div class="row my-3">
-            <div class="col-6 bg-dark-subtle d-none d-sm-block">
+            <div class="btn col-6 bg-dark-subtle d-none d-sm-block">
                 <img src="images/Screenshot_20240208-091630_Chrome.jpg" alt="static-weather-page" class="img-fluid rounded p-3 w-100 h-100">
             </div>
-            <div class="col-6 p-3 fw-bolder bg-light-subtle">
-                A static weather page, with fake data. It displays fake data on today's weather information.
-                <div><button class="rounded bg-dark text-light">launch webpage</button></div>
+            <div class="col-6 p-3 bg-light-subtle">
+                <h2>Static Weather App Project </h2>
+                <p>A static weather page, with fake data. It displays fake data on today's weather information.</p>
+                <div class="btn"><button class="rounded bg-dark text-light" title="launch static weather app">launch webpage</button></div>
             </div>
         </div>
     </div>
