made more changes

--- a/portfolio project/index.html
+++ b/portfolio project/index.html
@@ -43,33 +43,33 @@
     </div>
     <div class="container">
         <div class="row my-3">
-            <div class="btn col-6 bg-dark-subtle d-none d-sm-block">
+            <div class="col-6 bg-dark-subtle d-none d-md-block">
                 <img src="images/Screenshot_20240204-235555_Chrome.jpg" alt="landing-page" class="img-fluid rounded p-3 w-100 h-100">
              </div>
-             <div class="col-6 p-3 bg-light-subtle">
-                <h2>Luxury Goods Landpage Project</h2>
-                <p>This project is a simple landing page on luxury goods. it was coded using CSS, HTML and Javascript.</p>
-                <div class="btn"><button class="rounded bg-dark text-light" title="lauch landpage project">launch webpage</button></div>
+             <div class="col-md-6 col-sm-12 p-3 bg-light-subtle">
+                <h2 class="title">Luxury Goods Landpage Project</h2>
+                <p class="small">This project is a simple landing page on luxury goods. it was coded using CSS, HTML and Javascript.</p>
+                <div><button class="rounded bg-dark text-light" title="lauch landpage project">launch webpage</button></div>
              </div>
         </div>
         <div class="row my-3">
-            <div class="col-6 p-3 bg-light-subtle">
-                <h2>Weather App Project</h2>
-                <p>This weather app project was built using CSS, HTML, Ajax, Axios and Javascript. it gives the current weather of a particular country or state entered. it also adds some other information, like wind speed, humidty and an emoji to represent the weather condition.</p>
-                     <div class="btn"><button class="rounded bg-dark text-light" title="launch weaather app project">launch weatherapp</button></div>
+            <div class="col-sm-12 col-md-6 p-3 bg-light-subtle">
+                <h2 class="title">Weather App Project</h2>
+                <p class="small">This weather app project was built using CSS, HTML, Ajax, Axios and Javascript. it gives the current weather of a particular country or state entered. it also adds some other information, like wind speed, humidty and an emoji to represent the weather condition.</p>
+                     <div><button class="rounded bg-dark text-light" title="launch weaather app project">launch weatherapp</button></div>
             </div>
-             <div class="col-6 bg-dark-subtle d-none d-sm-block">
+             <div class="col-md-6 col-sm-12 bg-dark-subtle d-none d-md-block">
                 <img src="images/Screenshot_20240208-091602_Chrome.jpg" alt="weather-app" class="img-fluid rounded p-3 w-100 h-100">
             </div>
         </div>
         <div class="row my-3">
-            <div class="btn col-6 bg-dark-subtle d-none d-sm-block">
+            <div class="btn col-6 bg-dark-subtle d-none d-md-block">
                 <img src="images/Screenshot_20240208-091630_Chrome.jpg" alt="static-weather-page" class="img-fluid rounded p-3 w-100 h-100">
             </div>
-            <div class="col-6 p-3 bg-light-subtle">
-                <h2>Static Weather App Project </h2>
-                <p>A static weather page, with fake data. It displays fake data on today's weather information.</p>
-                <div class="btn"><button class="rounded bg-dark text-light" title="launch static weather app">launch webpage</button></div>
+            <div class="col-md-6 col-sm-12 p-3 bg-light-subtle">
+                <h2 class="title">Static Weather App Project </h2>
+                <p class="small">A static weather page, with fake data. It displays fake data on today's weather information.</p>
+                <div><button class="rounded bg-dark text-light" title="launch static weather app">launch webpage</button></div>
             </div>
         </div>
     </div>
