Made changes to the web app

--- a/portfolio project/about.html
+++ b/portfolio project/about.html
@@ -31,18 +31,18 @@
     <h2>About me</h2>
     <div class="my-style">
     <p> My name is Imafidon Oseremen Tabitha, I'm a final year student at the University of Benin. i love reading, writing and internet surfing. I have been coding for some time now and i absolutely love it.</p>
-    <p> I'm a web developer, UI/UX designer, software engineer and a blogger. I have worked on a variety of projecs which you can access <a href="project/weather.html">here</a> or can access from the link on projects on my homepage. Access the link to see some of my works.</p>
+    <p> I'm an aspiring software engineer. You can access some of the projects i have worked on <a href="project/weather.html">here</a> or can access from the link on projects on my homepage. Access the link to see some of my works.</p>
     </div>
     <div class="container">
         <div class="row my-3">
             <div class="col-md-4">
-                <img src="images/Screenshot_20240204-235555_Chrome.jpg" class="img-fluid rounded border border-3 border-secondary-subtle p-3 w-75 h-75">
+                <img src="images/landing_page.jpg" class="img-fluid rounded border border-3 border-secondary-subtle p-3 w-75 h-75">
              </div>
             <div class="col-md-4">
-                <img src="images/Screenshot_20240208-091602_Chrome.jpg" class="img-fluid rounded border border-3 border-secondary-subtle p-3 w-75 h-75">
+                <img src="images/palindrome_image.jpg" class="img-fluid rounded border border-3 border-secondary-subtle p-3 w-75 h-75">
             </div>
             <div class="col-md-4">
-                <img src="images/Screenshot_20240208-091630_Chrome.jpg" class="img-fluid rounded border border-3 border-secondary-subtle p-3 w-75 h-75">
+                <img src="images/Weather_App.jpg" class="img-fluid rounded border border-3 border-secondary-subtle p-3 w-75 h-75">
             </div>
         </div> 
     </div> 
