--- a/portfolio project/index.html
+++ b/portfolio project/index.html
@@ -44,32 +44,32 @@
     <div class="container">
         <div class="row my-3">
             <div class="col-6 bg-dark-subtle d-none d-md-block">
-                <img src="images/Screenshot_20240204-235555_Chrome.jpg" alt="landing-page" class="img-fluid rounded p-3 w-100 h-100">
+                <img src="images/landing_page.jpg" alt="landing-page" class="img-fluid rounded p-3 w-100 h-100">
              </div>
              <div class="col-md-6 col-sm-12 p-3 bg-light-subtle">
                 <h2 class="title">Luxury Goods Landpage Project</h2>
                 <p class="small">This project is a simple landing page on luxury goods. it was coded using CSS, HTML and Javascript.</p>
-                <div><button class="rounded bg-dark text-light" title="lauch landpage project">launch webpage</button></div>
+                <div><button class="rounded bg-dark text-light" title="lauch landpage project"><a href="https://my-landing-page-8s4m.onrender.com">launch webpage</a></button></div>
              </div>
         </div>
         <div class="row my-3">
             <div class="col-sm-12 col-md-6 p-3 bg-light-subtle">
                 <h2 class="title">Weather App Project</h2>
                 <p class="small">This weather app project was built using CSS, HTML, Ajax, Axios and Javascript. it gives the current weather of a particular country or state entered. it also adds some other information, like wind speed, humidty and an emoji to represent the weather condition.</p>
-                     <div><button class="rounded bg-dark text-light" title="launch weaather app project">launch weatherapp</button></div>
+                     <div><button class="rounded bg-dark text-light" title="launch weaather app project"><a  href="https://tabitha-weather-app.onrender.com">launch weatherapp</a></button></div>
             </div>
              <div class="col-md-6 col-sm-12 bg-dark-subtle d-none d-md-block">
-                <img src="images/Screenshot_20240208-091602_Chrome.jpg" alt="weather-app" class="img-fluid rounded p-3 w-100 h-100">
+                <img src="images/Weather_App.jpg" alt="weather-app" class="img-fluid rounded p-3 w-100 h-100">
             </div>
         </div>
         <div class="row my-3">
             <div class="btn col-6 bg-dark-subtle d-none d-md-block">
-                <img src="images/Screenshot_20240208-091630_Chrome.jpg" alt="static-weather-page" class="img-fluid rounded p-3 w-100 h-100">
+                <img src="images/palindrome_image.jpg" alt="palindrome_app_image" class="img-fluid rounded p-3 w-100 h-100">
             </div>
             <div class="col-md-6 col-sm-12 p-3 bg-light-subtle">
-                <h2 class="title">Static Weather App Project </h2>
-                <p class="small">A static weather page, with fake data. It displays fake data on today's weather information.</p>
-                <div><button class="rounded bg-dark text-light" title="launch static weather app">launch webpage</button></div>
+                <h2 class="title">Palindrome App Project </h2>
+                <p class="small">A palindrome page, it takes in an input string and checks if it is a palindrome or not.</p>
+                <div><button class="rounded bg-dark text-light" title="launch palindrome app"><a href="https://palindrome-project.onrender.com">launch Palindrome app</a></button></div>
             </div>
         </div>
     </div>
