--- a/portfolio project/about.html
+++ b/portfolio project/about.html
@@ -5,48 +5,92 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-RnWPkNfD2H9Vktltbh2xw3t+LaI50C9nOOpDX3ZW6+VFF5V2Tx/AtfAGs3EdMZJO/BymE9prqmLkVGfYH/Lgjw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <style>
+        body{
+            background-color: #9B83A6;
+        }
         h2{
-            display: flex;
-            justify-content: center;
+            color: #5F2028;
+            text-align: center;
             font-size: 40px;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
+        }
+        h5{
+            text-align: center;
+            font-family: cursive;
+            color: black;
+        }
+        ul{
+            text-align: left;
+            font-size: 15px;
         }
         .my-style{
             display: flex;
             flex-direction: column;
         }
         p{
-            font-size: 20px;
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            text-align: left;
+            font-size: 15px;
+            font-family: 'Times New Roman', Times, serif;
+        }
+        .thanks{
+            text-align: center;
+            font-size: 30px;
+            color: beige;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         }
         div{
             display: flex;
             justify-content: center;
             font-size: 20px;
         }
+        button{
+            padding: 25px;
+            margin: auto;
+            width: 50%;
+            border-radius: 15px;
+            background-color: #2D0F0F;
+        }
+        a{
+            color: wheat;
+        }
     </style>
 </head>
 <body>
     <h2>About me</h2>
     <div class="my-style">
-    <p> My name is Imafidon Oseremen Tabitha, I'm a final year student at the University of Benin. i love reading, writing and internet surfing. I have been coding for some time now and i absolutely love it.</p>
-    <p> I'm an aspiring software engineer. You can access some of the projects i have worked on <a href="project/weather.html">here</a> or can access from the link on projects on my homepage. Access the link to see some of my works.</p>
-    </div>
-    <div class="container">
-        <div class="row my-3">
-            <div class="col-md-4">
-                <img src="images/landing_page.jpg" class="img-fluid rounded border border-3 border-secondary-subtle p-3 w-75 h-75">
-             </div>
-            <div class="col-md-4">
-                <img src="images/palindrome_image.jpg" class="img-fluid rounded border border-3 border-secondary-subtle p-3 w-75 h-75">
-            </div>
-            <div class="col-md-4">
-                <img src="images/Weather_App.jpg" class="img-fluid rounded border border-3 border-secondary-subtle p-3 w-75 h-75">
-            </div>
-        </div> 
-    </div> 
-    <div id="contact"><a href="mailto:imafidontabitha@gmail.com">contactme@imafidontabitha@gmail.com</a></div>
-    <div><a href="index.html">Back to homepage</a></div>
+    <h5>Hello, I'm Imafidon Oseremen Tabitha</h5>
+    <p>
+        Welcome to my portfolio website! I'm a passionate junior frontend developer with a knack for crafting engaging and user-friendly web experiences. My journey in web development began with a fascination for creating things that not only look good but also function seamlessly. Since then, I've been on an exciting path of learning and growth, constantly honing my skills to stay ahead in the dynamic world of technology.
+    </p>
+    <h4>What i do</h4>
+    <p>
+        As a frontend developer, I specialize in bringing designs to life using HTML, CSS, and JavaScript. I enjoy the creative process of turning static mockups into interactive and responsive websites. From building intuitive user interfaces to optimizing web performance, I strive to deliver high-quality solutions that enhance the user experience. You can check out some of  <a href="./project/work.html">my works.</a>    </p>
+    <h4>My skills</h4>
+    <p>
+        Here are some of the technologies and tools I'm proficient in:
+        <ul>
+            <li><strong>Languages:</strong> HTML5, CSS3, JavaScript (ES6+)</li>
+            <li><strong>Frameworks:</strong>Bootstap, React.js</li>
+            <li><strong>Version control:</strong>Git, GitHub</li>
+            <li><strong>Responsive Design:</strong>Media queries, Flexbox, Grid</li>
+            <li><strong>Development tools:</strong>Visual Studio Code, Chrome DevTools</li>
+
+        </ul>
+    </p>
+    <h4>My journey</h4>
+    <p>
+        My journey in frontend development started with self-directed learning through online tutorials, bootcamp, and documentation. I believe in continuous learning and staying updated with the latest technologies and trends in the industry.
+    </p>
+    <h4>My projects</h4>
+    <p>
+        Throughout my learning journey, I've worked on various projects that have allowed me to apply my skills and explore different aspects of frontend development. From building responsive landing pages to developing interactive web applications, each project has been a valuable learning experience that has shaped my abilities as a developer.
+    </p>
+    <p class="thanks">
+        Thank you for visiting my portfolio!
+    </p>
+    <button><a href="./index.html">Back to homepage</a> </button>
 </body>
 </html>
