--- a/portfolio project/contact.html
+++ b/portfolio project/contact.html
@@ -4,14 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact me</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kenia&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kenia&family=Khula:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+    <style>
+        .container{
+            padding: 150px;
+            margin: 50px;
+            background-color: #7A6783;
+        }
+        .first{
+            display: flex;
+            justify-content: space-evenly;
+        }
+        h2{
+            font-family: "Kenia", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+            font-size: 50px;
+        }
+        p{
+            font-family: "Khula", sans-serif;
+            font-weight: 300px;
+            font-style: normal;
+            font-size: 25px;
+        }
+        button{
+            padding: 15px;
+            background-color: #9B8F88;
+            border-radius: 10PX;
+        }
+        a{
+            font-family: "Kenia", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+            color: #5C3737; 
+            font-size: 25px;
+        }
+        @media(max-width:860px){
+            .container{
+                padding: 50px;
+                margin: auto;
+                width: 90%;
+            }
+            a{
+                font-size: 15px;
+            }
+            p{
+                font-size: 15px;
+            }
+
+        }
+    </style>
 </head>
 <body>
-    <h1>Contact me</h1>
-    <p>You can contact me through the following ways</p>
-    <div><a href="mailto: imafidontabitha@gmail.com">imafidontabitha@gmail.com</a></div>
-    <div><a href="https://github.com/Tabitht">github.com</a></div>
-    <div><a href="https://x.com/ITabitha3661?t=b79SoxccWM5hPTUXkWT6jw&s=09">Twitter</a></div>
-    <div><a href="https://www.linkedin.com/in/imafidon-tabitha-b353a1232?utm_campaign=share_via&utm_content=profile&utm_medium=android_app">linkedin</a></div>
-    <div><a href="index.html">Back to homepage</a></div>
+    <div class="container">
+    <div class="first">
+    <div>
+    <h2>Hire me</h2>
+    </div>
+    <div>
+        <button><a href="index.html">Home</a></button>
+    </div>
+    </div>
+    <p>You can reach me through the following social media network</p>
+    <div class="row" class="socials">
+    <div class="col-3"><a href="mailto: imafidontabitha@gmail.com">Email</a></div>
+    <div class="col-3"><a href="https://github.com/Tabitht">Github</a></div>
+    <div class="col-3"><a href="https://x.com/ITabitha3661?t=b79SoxccWM5hPTUXkWT6jw&s=09">Twitter</a></div>
+    <div class="col-3"><a href="https://www.linkedin.com/in/imafidon-tabitha-b353a1232?utm_campaign=share_via&utm_content=profile&utm_medium=android_app">linkedin</a></div>
+    </div>
+    </div>
 </body>
 </html>
