made the button for the about me page color lighter

--- a/portfolio project/about.html
+++ b/portfolio project/about.html
@@ -47,11 +47,11 @@
             font-size: 20px;
         }
         button{
-            padding: 25px;
+            padding: 10px;
             margin: auto;
-            width: 50%;
+            width: 30%;
             border-radius: 15px;
-            background-color: #2D0F0F;
+            background-color: #572d2d;
         }
         a{
             color: wheat;
