Added more description to home page

--- a/portfolio project/index.html
+++ b/portfolio project/index.html
@@ -43,7 +43,8 @@
         <h2 class="wave">Hi,</h2>
         <h2 class="name">I'm Imafidon Tabitha</h2>
         <h3 class="about">Frontend developer based in Nigeria</h3>
-        <button class="button"><a class="link" href="contact.html">Contact me</a></button>
+        <p>Welcome to my portfolio website! I'm a passionate junior frontend developer with a knack for crafting engaging and user-friendly web experiences.</p>
+        <button class="button"><a class="link" href="./project/work.html">My work</a></button>
     </div>
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous">
